# codex-search

./: AGENTS.md  Cargo.toml  README.md
src/: cli.rs  discovery.rs  lib.rs  main.rs  search.rs  session.rs  tui.rs  util.rs
