[package]
name = "codex-search-rust"
version = "0.1.0"
edition = "2024"
default-run = "cdxs"

[lib]
name = "codex_search_rust"
path = "src/lib.rs"

[[bin]]
name = "cdxs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
directories = "5"
humantime = "2"
once_cell = "1"
shell-words = "1"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde", "local-offset"] }
walkdir = "2"
crossbeam-channel = "0.5"
nucleo = "0.5"
fuzzy-matcher = "0.3"
